--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -623,4 +623,7 @@
     <value>Import/Export</value>
     <comment>Label for ribbon button to import or export presets or queues</comment>
   </data>
+  <data name="AddedSubtitleFromFile" xml:space="preserve">
+    <value>Successfully added subtitle from file {0}</value>
+  </data>
 </root>
