--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -280,4 +280,16 @@ A full copy of the GNU General Public License has been included along with this 
     <value>First</value>
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
+  <data name="DuplicateTrack" xml:space="preserve">
+    <value>Duplicate this track</value>
+    <comment>Tip to duplicate the audio or subtitle track.</comment>
+  </data>
+  <data name="RemoveTrack" xml:space="preserve">
+    <value>Remove this track</value>
+    <comment>Tip for button to remove the audio or subtitle track.</comment>
+  </data>
+  <data name="SelectedOverTotalTracksFormat" xml:space="preserve">
+    <value>{0}/{1} track(s)</value>
+    <comment>{0} is the number of selected subtitle or audio tracks and {1} is the number of total tracks on the source.</comment>
+  </data>
 </root>
