--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -373,8 +373,8 @@
     <value>Process options</value>
   </data>
   <data name="CpuThrottlingLabel" xml:space="preserve">
-    <value>CPU throttling:</value>
-    <comment>The label for the CPU throttling feature. This is where you limit the amount of CPU the encoder can use.</comment>
+    <value>CPU throttling - Allowed Cores:</value>
+    <comment>The label for the CPU throttling feature. This is where you limit the amount of CPU the encoder can use. It labels a slider that controls the percentage of allowed cores, where the max is 100%.</comment>
   </data>
   <data name="CpuThrottlingToolTip" xml:space="preserve">
     <value>Use CPU throttling to limit the number of processor cores VidCoder can use when encoding.</value>
