--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -288,8 +288,12 @@ A full copy of the GNU General Public License has been included along with this 
     <value>Remove this track</value>
     <comment>Tip for button to remove the audio or subtitle track.</comment>
   </data>
-  <data name="SelectedOverTotalTracksFormat" xml:space="preserve">
-    <value>{0}/{1} track(s)</value>
-    <comment>{0} is the number of selected subtitle or audio tracks and {1} is the number of total tracks on the source.</comment>
+  <data name="SelectedOverTotalAudioTracksFormat" xml:space="preserve">
+    <value>{0}/{1} audio track(s)</value>
+    <comment>{0} is the number of selected audio tracks and {1} is the number of total tracks on the source.</comment>
+  </data>
+  <data name="SelectedOverTotalSubtitleTracksFormat" xml:space="preserve">
+    <value>{0}/{1} subtitle track(s)</value>
+    <comment>{0} is the number of selected subtitle tracks and {1} is the number of total tracks on the source.</comment>
   </data>
 </root>
